# JinnyLamp

./: .gitignore  CMakeLists.txt  LICENSE  sdkconfig  sdkconfig.old  test_asr.py
docs/: ASR Commands  AnimationInfo.md  CHAT_commands.md  DOA  Definition of Done.md  Handoff.md  Last_session.md  Lifecycle & State Machine task.md  NewTimeApproch.md  PowerShell.md  Power_managment.md  README.md  Storage_instructions.md  Voice acrhitecture.md  Voice_ivents.task.md  WakeNet + voice-cycle.md  architecture.md  asr-tech-task.md  commands.md  doa.md  doav1.md  espnow.md  file descriptions.md  fx_fire.md  git_snapshot.txt  tech_debt.md  tree.txt  техдолгДляОгня.md  тз_под_вейк_нет.md
docs/adr/: 0001.md
docs/analysis/: code_index.txt  (+5 more)
main/: CMakeLists.txt  Kconfig.projbuild  asr_debug.c  asr_debug.h  asr_multinet.c  asr_multinet.h  audio_bus.c  audio_bus.h  audio_i2s.c  audio_i2s.h  audio_player.c  audio_player.h  audio_stream.c  audio_stream.h  audio_tone_test.c  audio_tone_test.h  ctrl_bus.c  ctrl_bus.h  doa_probe.c  doa_probe.h  fx_canvas.c  fx_canvas.h  fx_effects_classic_4.c  fx_effects_doa_debug.c  fx_effects_fire.c  fx_effects_geo_10.c  fx_effects_geo_11.c  fx_effects_geo_12.c  fx_effects_geo_14.c  fx_effects_geo_5.c  fx_effects_geo_6.c  fx_effects_geo_7.c  fx_effects_geo_8.c  fx_effects_geo_9.c  fx_effects_noise_1.c  fx_effects_noise_2.c  fx_effects_noise_3.c  fx_effects_pack12_basic.c  fx_effects_ported_1.c  fx_effects_simple.c  (+38 more)
partitions/: partitions_8mb_ota_2p5m_littlefs.csv  partitions_voice.csv
tools/: build_voice_pack_adpcm.ps1  voice_rename_manifest_v1.ps1
(+4 files in other folders)
